--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,15 @@
   <description>Testing for future tasks</description>
   
   <dependencies>
+  
+ <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
+
+ 
 <dependency>
 <groupId>javax.servlet</groupId>
 <artifactId>javax.servlet-api</artifactId>
