--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@ testing for future task</description>
 <scope>provided</scope>
 </dependency>
 <dependency>
+<groupId>mysql</groupId>
+<artifactId>mysql-connector-java</artifactId>
+<version>8.0.25</version>
+</dependency>
+
+<dependency>
 <groupId>javax.servlet.jsp</groupId>
 <artifactId>javax.servlet.jsp-api</artifactId>
 <version>2.3.1</version>
